--- a/Chat/package.json
+++ b/Chat/package.json
@@ -6,8 +6,8 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.3",
-    "jade": "*",
-    "socket.io": "*"
+    "express": "~3.0.3",
+    "jade": "~1.1.5",
+    "socket.io": "~0.9.16"
   }
 }
