--- a/Express/package.json
+++ b/Express/package.json
@@ -6,7 +6,7 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.3",
-    "jade": "*"
+    "express": "~3.4.8",
+    "jade": "~1.1.5"
   }
 }
